@@ -1,4 +1,4 @@
-// Copyright 2000-2019 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2024 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.psi.impl.source.tree.injected;
 
 import com.intellij.lang.injection.MultiHostInjector;
@@ -7,10 +7,9 @@ import com.intellij.openapi.util.Pair;
 import com.intellij.psi.*;
 import org.jetbrains.annotations.NotNull;
 
-import java.util.Collections;
 import java.util.List;
 
-public class JavaConcatenationToInjectorAdapter extends ConcatenationInjectorManager.BaseConcatenation2InjectorAdapter implements MultiHostInjector {
+public final class JavaConcatenationToInjectorAdapter extends ConcatenationInjectorManager.BaseConcatenation2InjectorAdapter implements MultiHostInjector {
   public JavaConcatenationToInjectorAdapter(@NotNull Project project) {
     super(project);
   }
@@ -19,9 +18,12 @@ public class JavaConcatenationToInjectorAdapter extends ConcatenationInjectorMan
   public Pair<PsiElement, PsiElement[]> computeAnchorAndOperands(@NotNull PsiElement context) {
     PsiElement element = context;
     PsiElement parent = context.getParent();
-    while (parent instanceof PsiPolyadicExpression && ((PsiPolyadicExpression)parent).getOperationTokenType() == JavaTokenType.PLUS
-           || parent instanceof PsiAssignmentExpression && ((PsiAssignmentExpression)parent).getOperationTokenType() == JavaTokenType.PLUSEQ
-           || parent instanceof PsiConditionalExpression && ((PsiConditionalExpression)parent).getCondition() != element
+    if (element instanceof PsiFragment && parent instanceof PsiTemplate) {
+      return Pair.create(parent, parent.getChildren());
+    }
+    while (parent instanceof PsiPolyadicExpression polyadic && polyadic.getOperationTokenType() == JavaTokenType.PLUS
+           || parent instanceof PsiAssignmentExpression assignment && assignment.getOperationTokenType() == JavaTokenType.PLUSEQ
+           || parent instanceof PsiConditionalExpression cond && cond.getCondition() != element
            || parent instanceof PsiTypeCastExpression
            || parent instanceof PsiParenthesizedExpression) {
       element = parent;
@@ -48,9 +50,8 @@ public class JavaConcatenationToInjectorAdapter extends ConcatenationInjectorMan
   }
 
   @Override
-  @NotNull
-  public List<? extends Class<? extends PsiElement>> elementsToInjectIn() {
+  public @NotNull List<? extends Class<? extends PsiElement>> elementsToInjectIn() {
     return LITERALS;
   }
-  private static final List<Class<PsiLiteralExpression>> LITERALS = Collections.singletonList(PsiLiteralExpression.class);
+  private static final List<Class<? extends PsiElement>> LITERALS = List.of(PsiLiteralExpression.class, PsiFragment.class);
 }
