@@ -1,4 +1,4 @@
-// Copyright 2000-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2024 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.openapi.fileTypes;
 
 import com.intellij.lang.Language;
@@ -10,7 +10,6 @@ import com.intellij.openapi.extensions.PluginDescriptor;
 import com.intellij.util.KeyedLazyInstance;
 import org.jetbrains.annotations.NotNull;
 
-import java.util.Collections;
 import java.util.List;
 
 public final class SyntaxHighlighterLanguageFactory extends LanguageExtension<SyntaxHighlighterFactory> {
@@ -32,7 +31,7 @@ public final class SyntaxHighlighterLanguageFactory extends LanguageExtension<Sy
     SyntaxHighlighter highlighter = LanguageSyntaxHighlighters.INSTANCE.forLanguage(key);
     if (highlighter != null) {
       checkAddEPListener();
-      return Collections.singletonList(new SingleLazyInstanceSyntaxHighlighterFactory() {
+      return List.of(new SingleLazyInstanceSyntaxHighlighterFactory() {
         @Override
         protected @NotNull SyntaxHighlighter createHighlighter() {
           return highlighter;
@@ -52,7 +51,7 @@ public final class SyntaxHighlighterLanguageFactory extends LanguageExtension<Sy
     LanguageSyntaxHighlighters.EP_NAME.addExtensionPointListener(new MyEPListener(), null);
   }
 
-  private class MyEPListener implements ExtensionPointListener<KeyedLazyInstance<SyntaxHighlighter>>, ExtensionPointPriorityListener {
+  private final class MyEPListener implements ExtensionPointListener<KeyedLazyInstance<SyntaxHighlighter>>, ExtensionPointPriorityListener {
     @Override
     public void extensionAdded(@NotNull KeyedLazyInstance<SyntaxHighlighter> extension, @NotNull PluginDescriptor pluginDescriptor) {
       invalidateCacheForExtension(extension.getKey());
