@@ -5,7 +5,10 @@ import com.intellij.codeInsight.CodeInsightBundle;
 import com.intellij.codeInsight.intention.impl.BaseIntentionAction;
 import com.intellij.codeInspection.util.IntentionFamilyName;
 import com.intellij.lang.LangBundle;
-import com.intellij.modcommand.*;
+import com.intellij.modcommand.ActionContext;
+import com.intellij.modcommand.ModCommand;
+import com.intellij.modcommand.ModCommandAction;
+import com.intellij.modcommand.Presentation;
 import com.intellij.openapi.project.Project;
 import com.intellij.openapi.util.NlsSafe;
 import com.intellij.openapi.util.text.StringUtil;
@@ -18,14 +21,11 @@ import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 public abstract class AbstractNumberConversionIntention implements ModCommandAction {
 
-  @IntentionFamilyName
-  @NotNull
   @Override
-  public String getFamilyName() {
+  public @IntentionFamilyName @NotNull String getFamilyName() {
     return CodeInsightBundle.message("intention.family.convert.number");
   }
 
@@ -54,8 +54,7 @@ public abstract class AbstractNumberConversionIntention implements ModCommandAct
     return Presentation.of(LangBundle.message("intention.name.convert.number.to.with.text", singleConverter, convertedText));
   }
 
-  @Nullable
-  private NumberConversionContext getContext(@NotNull ActionContext actionContext) {
+  private @Nullable NumberConversionContext getContext(@NotNull ActionContext actionContext) {
     PsiElement element = actionContext.findLeaf();
     NumberConversionContext context = element == null ? null : extract(element);
     if (context == null) {
@@ -95,9 +94,8 @@ public abstract class AbstractNumberConversionIntention implements ModCommandAct
         return Presentation.of(toString());
       }
 
-      @NlsSafe
       @Override
-      public String toString() {
+      public @NlsSafe String toString() {
         return StringUtil.capitalize(myConverter.toString()) + " (" + myResult + ")";
       }
 
@@ -109,8 +107,8 @@ public abstract class AbstractNumberConversionIntention implements ModCommandAct
     List<Conversion> list = getConverters(actionContext.file()).stream()
       .map(converter -> new Conversion(converter, converter.getConvertedText(text, number)))
       .filter(conversion -> conversion.myResult != null)
-      .collect(Collectors.toList());
-    return new ModChooseAction(LangBundle.message("intention.name.convert.number.to.title"), list);
+      .toList();
+    return ModCommand.chooseAction(LangBundle.message("intention.name.convert.number.to.title"), list);
   }
 
   /**
@@ -118,9 +116,8 @@ public abstract class AbstractNumberConversionIntention implements ModCommandAct
    * @param element an element to extract the context from
    * @return extracted context or null if given element is not a number which could be converted.
    */
-  @Nullable
   @Contract(pure = true)
-  protected abstract NumberConversionContext extract(@NotNull PsiElement element);
+  protected abstract @Nullable NumberConversionContext extract(@NotNull PsiElement element);
 
   /**
    * Returns list of converters which are applicable to given file
@@ -128,9 +125,8 @@ public abstract class AbstractNumberConversionIntention implements ModCommandAct
    * @param file file to find relevant converters
    * @return list of converters for given PsiFile
    */
-  @NotNull
   @Contract(pure = true)
-  protected abstract List<NumberConverter> getConverters(@NotNull PsiFile file);
+  protected abstract @NotNull List<NumberConverter> getConverters(@NotNull PsiFile file);
 
   /**
    * Performs a replacement of given source number with the conversion result.
@@ -147,15 +143,15 @@ public abstract class AbstractNumberConversionIntention implements ModCommandAct
     /**
      * An element which represents a number to be converted
      */
-    @NotNull final SmartPsiElementPointer<PsiElement> myElement;
+    final @NotNull SmartPsiElementPointer<PsiElement> myElement;
     /**
      * A value of that number
      */
-    @NotNull final Number myNumber;
+    final @NotNull Number myNumber;
     /**
      * A textual representation of the number
      */
-    @NotNull final String myText;
+    final @NotNull String myText;
     /**
      * Whether there's a separate negation (unary minus) applied to the number. If true, {@link #myText} doesn't include that negation,
      * but {@link #myNumber} is properly negated and {@link #myElement} points to the unary minus expression.
@@ -174,8 +170,7 @@ public abstract class AbstractNumberConversionIntention implements ModCommandAct
       return myElement.getElement();
     }
 
-    @NotNull
-    public Project getProject() {
+    public @NotNull Project getProject() {
       return myElement.getProject();
     }
   }
