@@ -1,7 +1,6 @@
-// Copyright 2000-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2024 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package org.jetbrains.idea.maven.importing;
 
-import com.google.common.collect.ImmutableMap;
 import com.intellij.build.events.MessageEvent;
 import com.intellij.execution.configurations.JavaParameters;
 import com.intellij.ide.highlighter.ModuleFileType;
@@ -23,7 +22,6 @@ import com.intellij.pom.java.AcceptedLanguageLevelsSettings;
 import com.intellij.pom.java.LanguageLevel;
 import com.intellij.util.containers.ContainerUtil;
 import com.intellij.util.text.VersionComparatorUtil;
-import org.apache.commons.lang.StringUtils;
 import org.jdom.Element;
 import org.jetbrains.annotations.ApiStatus;
 import org.jetbrains.annotations.NotNull;
@@ -33,40 +31,37 @@ import org.jetbrains.idea.maven.model.MavenArtifact;
 import org.jetbrains.idea.maven.model.MavenPlugin;
 import org.jetbrains.idea.maven.project.MavenProject;
 import org.jetbrains.idea.maven.project.MavenProjectsManager;
-import org.jetbrains.idea.maven.project.MavenProjectsTree;
 import org.jetbrains.idea.maven.utils.MavenUtil;
 
 import java.nio.file.Path;
-import java.util.HashMap;
 import java.util.Map;
 import java.util.function.Supplier;
 
 import static com.intellij.openapi.util.text.StringUtil.compareVersionNumbers;
+import static com.intellij.util.ObjectUtils.notNull;
 
 public final class MavenImportUtil {
   public static final String TEST_SUFFIX = ".test";
   public static final String MAIN_SUFFIX = ".main";
 
-  private static final Map<String, LanguageLevel> MAVEN_IDEA_PLUGIN_LEVELS = ImmutableMap.of(
+  private static final Map<String, LanguageLevel> MAVEN_IDEA_PLUGIN_LEVELS = Map.of(
     "JDK_1_3", LanguageLevel.JDK_1_3,
     "JDK_1_4", LanguageLevel.JDK_1_4,
     "JDK_1_5", LanguageLevel.JDK_1_5,
     "JDK_1_6", LanguageLevel.JDK_1_6,
     "JDK_1_7", LanguageLevel.JDK_1_7);
 
-  @NotNull
-  public static String getArtifactUrlForClassifierAndExtension(@NotNull MavenArtifact artifact,
-                                                               @Nullable String classifier,
-                                                               @Nullable String extension) {
+  public static @NotNull String getArtifactUrlForClassifierAndExtension(@NotNull MavenArtifact artifact,
+                                                                        @Nullable String classifier,
+                                                                        @Nullable String extension) {
 
     String newPath = artifact.getPathForExtraArtifact(classifier, extension);
     return VirtualFileManager.constructUrl(JarFileSystem.PROTOCOL, newPath) + JarFileSystem.JAR_SEPARATOR;
   }
 
-  @NotNull
-  public static String getArtifactUrl(@NotNull MavenArtifact artifact,
-                                      @NotNull MavenExtraArtifactType artifactType,
-                                      @NotNull MavenProject project) {
+  public static @NotNull String getArtifactUrl(@NotNull MavenArtifact artifact,
+                                               @NotNull MavenExtraArtifactType artifactType,
+                                               @NotNull MavenProject project) {
 
     Pair<String, String> result = project.getClassifierAndExtension(artifact, artifactType);
     String classifier = result.first;
@@ -93,7 +88,8 @@ public final class MavenImportUtil {
 
     Element cfg = mavenProject.getPluginConfiguration("com.googlecode", "maven-idea-plugin");
     if (cfg != null) {
-      level = MAVEN_IDEA_PLUGIN_LEVELS.get(cfg.getChildTextTrim("jdkLevel"));
+      String key = cfg.getChildTextTrim("jdkLevel");
+      level = key == null ? null : MAVEN_IDEA_PLUGIN_LEVELS.get(key);
     }
 
     if (level == null) {
@@ -112,8 +108,7 @@ public final class MavenImportUtil {
     return level;
   }
 
-  @NotNull
-  public static MavenJavaVersionHolder getMavenJavaVersions(@NotNull MavenProject mavenProject) {
+  public static @NotNull MavenJavaVersionHolder getMavenJavaVersions(@NotNull MavenProject mavenProject) {
     boolean useReleaseCompilerProp = isReleaseCompilerProp(mavenProject);
     LanguageLevel sourceVersion = getMavenLanguageLevel(mavenProject, useReleaseCompilerProp, true, false);
     LanguageLevel sourceTestVersion = getMavenLanguageLevel(mavenProject, useReleaseCompilerProp, true, true);
@@ -122,11 +117,10 @@ public final class MavenImportUtil {
     return new MavenJavaVersionHolder(sourceVersion, targetVersion, sourceTestVersion, targetTestVersion);
   }
 
-    @Nullable
-  private static LanguageLevel getMavenLanguageLevel(@NotNull MavenProject mavenProject,
-                                                boolean useReleaseCompilerProp,
-                                                boolean isSource,
-                                                boolean isTest) {
+    private static @Nullable LanguageLevel getMavenLanguageLevel(@NotNull MavenProject mavenProject,
+                                                                 boolean useReleaseCompilerProp,
+                                                                 boolean isSource,
+                                                                 boolean isTest) {
     String mavenProjectReleaseLevel = useReleaseCompilerProp
                                       ? isTest ? mavenProject.getTestReleaseLevel() : mavenProject.getReleaseLevel()
                                       : null;
@@ -141,8 +135,7 @@ public final class MavenImportUtil {
       return level;
     }
 
-  @NotNull
-  public static LanguageLevel adjustLevelAndNotify(@NotNull Project project, @NotNull LanguageLevel level) {
+  public static @NotNull LanguageLevel adjustLevelAndNotify(@NotNull Project project, @NotNull LanguageLevel level) {
     if (!AcceptedLanguageLevelsSettings.isLanguageLevelAccepted(level)) {
       LanguageLevel highestAcceptedLevel = AcceptedLanguageLevelsSettings.getHighestAcceptedLevel();
       if (highestAcceptedLevel.isLessThan(level)) {
@@ -163,8 +156,7 @@ public final class MavenImportUtil {
     }
   }
 
-  @NotNull
-  public static LanguageLevel getDefaultLevel(MavenProject mavenProject) {
+  public static @NotNull LanguageLevel getDefaultLevel(MavenProject mavenProject) {
     MavenPlugin plugin = mavenProject.findPlugin("org.apache.maven.plugins", "maven-compiler-plugin");
     if (plugin != null && plugin.getVersion() != null) {
       //https://github.com/apache/maven-compiler-plugin/blob/master/src/main/java/org/apache/maven/plugin/compiler/AbstractCompilerMojo.java
@@ -187,25 +179,32 @@ public final class MavenImportUtil {
   }
 
   private static LanguageLevel adjustPreviewLanguageLevel(MavenProject mavenProject, LanguageLevel level) {
+    String enablePreviewProperty = mavenProject.getProperties().getProperty("maven.compiler.enablePreview");
+    if (Boolean.parseBoolean(enablePreviewProperty)) {
+      return notNull(level.getPreviewLevel(), level);
+    }
+
     Element compilerConfiguration = mavenProject.getPluginConfiguration("org.apache.maven.plugins", "maven-compiler-plugin");
     if (compilerConfiguration != null) {
+      String enablePreviewParameter = compilerConfiguration.getChildTextTrim("enablePreview");
+      if (Boolean.parseBoolean(enablePreviewParameter)) {
+        return notNull(level.getPreviewLevel(), level);
+      }
+
       Element compilerArgs = compilerConfiguration.getChild("compilerArgs");
       if (compilerArgs != null) {
         if (isPreviewText(compilerArgs) ||
             ContainerUtil.exists(compilerArgs.getChildren("arg"), MavenImportUtil::isPreviewText) ||
             ContainerUtil.exists(compilerArgs.getChildren("compilerArg"), MavenImportUtil::isPreviewText)) {
-          try {
-            return LanguageLevel.valueOf(level.name() + "_PREVIEW");
-          }
-          catch (IllegalArgumentException ignored) {
-          }
+          return notNull(level.getPreviewLevel(), level);
         }
       }
     }
+
     return level;
   }
 
-  private static boolean isPreviewText(Element child) {
+  public static boolean isPreviewText(Element child) {
     return JavaParameters.JAVA_ENABLE_PREVIEW_PROPERTY.equals(child.getTextTrim());
   }
 
@@ -229,49 +228,13 @@ public final class MavenImportUtil {
     return moduleName.length() > 5 && moduleName.endsWith(TEST_SUFFIX);
   }
 
-  @NotNull
-  public static String getParentModuleName(@NotNull String moduleName) {
+  public static @NotNull String getParentModuleName(@NotNull String moduleName) {
     if (isMainModule(moduleName)) {
       return StringUtil.trimEnd(moduleName, MAIN_SUFFIX);
     }
     if (isTestModule(moduleName)) {
       return StringUtil.trimEnd(moduleName, TEST_SUFFIX);
     }
-    return moduleName;
-  }
-
-  /**
-   * @deprecated only used for experimental tree importer. Not used in Workpsace import
-   */
-  @NotNull
-  @Deprecated(forRemoval = true)
-  public static String getModuleName(@NotNull MavenProject mavenProject, @NotNull Project project) {
-    MavenProjectsTree projectsTree = MavenProjectsManager.getInstance(project).getProjectsTree();
-    return getModuleName(mavenProject, projectsTree, new HashMap<>());
-  }
-
-  /**
-   * @deprecated only used for experimental tree importer. Not used in Workpsace import
-   */
-  @NotNull
-  @Deprecated
-  public static String getModuleName(@NotNull MavenProject project,
-                                      @NotNull MavenProjectsTree projectsTree,
-                                      @NotNull Map<MavenProject, String> moduleNameMap) {
-    String moduleName = moduleNameMap.get(project);
-    if (moduleName != null) return moduleName;
-    moduleName = project.getMavenId().getArtifactId();
-    if (moduleName == null) return StringUtils.EMPTY;
-    if (project.getParentId() != null) {
-      MavenProject parentProject = projectsTree.findProject(project.getParentId());
-      if (parentProject != null) {
-        String parentName = getModuleName(parentProject, projectsTree, moduleNameMap);
-        if (StringUtil.isNotEmpty(parentName)) {
-          moduleName = parentName + "." + moduleName;
-        }
-      }
-    }
-    moduleNameMap.put(project, moduleName);
     return moduleName;
   }
 
@@ -284,7 +247,7 @@ public final class MavenImportUtil {
       modifiableModel.addContentEntry(contentRoot);
       modifiableModel.commit();
 
-      ExternalSystemUtil.markModuleAsMaven(module, true);
+      ExternalSystemUtil.markModuleAsMaven(module, null, true);
 
       return module;
     });
