@@ -23,14 +23,15 @@ import com.sun.jna.platform.win32.WinNT;
 import com.sun.jna.ptr.IntByReference;
 import com.sun.jna.ptr.LongByReference;
 import com.sun.jna.win32.StdCallLibrary;
+import org.jetbrains.annotations.VisibleForTesting;
 
 import java.io.File;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.logging.Level;
 
 import static com.intellij.updater.Runner.LOG;
+import static com.sun.jna.platform.win32.WinError.ERROR_MORE_DATA;
 
 /**
  * <p>A utility class to find processes that hold a lock to a file. This relies on a Windows API called
@@ -43,6 +44,7 @@ import static com.intellij.updater.Runner.LOG;
  */
 public final class NativeFileManager {
   private static final int MAX_PROCESSES = 10;
+  private static final int MAX_RETRIES = 5;
 
   private static boolean ourFailed = !Utils.IS_WINDOWS;
 
@@ -74,7 +76,8 @@ public final class NativeFileManager {
     }
   }
 
-  public static List<Process> getProcessesUsing(File file) {
+  @VisibleForTesting
+  public static List<Process> getProcessesUsing(File file, int initialBufferSize) {
     // If the DLL was not present (XP or other OS), do not try to find it again.
     if (!ourFailed) {
       try {
@@ -92,21 +95,29 @@ public final class NativeFileManager {
               LOG.warning("RmRegisterResources('" + file + "'): " + error);
             }
             else {
-              IntByReference procInfoNeeded = new IntByReference();
-              Win32RestartManager.RmProcessInfo info = new Win32RestartManager.RmProcessInfo();
-              Win32RestartManager.RmProcessInfo[] infos = (Win32RestartManager.RmProcessInfo[])info.toArray(MAX_PROCESSES);
-              IntByReference procInfo = new IntByReference(infos.length);
-              error = Win32RestartManager.INSTANCE.RmGetList(session.getValue(), procInfoNeeded, procInfo, info, new LongByReference());
-              if (error != 0) {
-                LOG.warning("RmGetList('" + file + "'): " + error);
-              }
-              else {
-                int n = procInfo.getValue();
-                List<Process> processes = new ArrayList<>(n);
-                for (int i = 0; i < n; i++) {
-                  processes.add(new Process(infos[i].Process.dwProcessId, new String(infos[i].strAppName).trim()));
+              int arraySize = initialBufferSize;
+              for (int retry = 0; retry < MAX_RETRIES; ++retry) {
+                IntByReference procInfoNeeded = new IntByReference();
+                Win32RestartManager.RmProcessInfo info = new Win32RestartManager.RmProcessInfo();
+                Win32RestartManager.RmProcessInfo[] infos = (Win32RestartManager.RmProcessInfo[])info.toArray(arraySize);
+                IntByReference procInfo = new IntByReference(infos.length);
+                error = Win32RestartManager.INSTANCE.RmGetList(session.getValue(), procInfoNeeded, procInfo, info, new LongByReference());
+                if (error == ERROR_MORE_DATA) {
+                  arraySize = procInfoNeeded.getValue();
+                  continue;
                 }
-                return processes;
+
+                if (error != 0) {
+                  LOG.warning("RmGetList('" + file + "'): " + error);
+                }
+                else {
+                  int n = procInfo.getValue();
+                  List<Process> processes = new ArrayList<>(n);
+                  for (int i = 0; i < n; i++) {
+                    processes.add(new Process(infos[i].Process.dwProcessId, new String(infos[i].strAppName).trim()));
+                  }
+                  return processes;
+                }
               }
             }
           }
@@ -122,7 +133,11 @@ public final class NativeFileManager {
       }
     }
 
-    return Collections.emptyList();
+    return List.of();
+  }
+
+  public static List<Process> getProcessesUsing(File file) {
+    return getProcessesUsing(file, MAX_PROCESSES);
   }
 
   @SuppressWarnings({"SpellCheckingInspection", "unused", "UnusedReturnValue"})
