@@ -1,4 +1,4 @@
-// Copyright 2000-2022 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
+// Copyright 2000-2023 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.updater;
 
 import java.io.*;
@@ -22,21 +22,19 @@ public final class Utils {
 
   private static final CopyOption[] COPY_STANDARD = {LinkOption.NOFOLLOW_LINKS, StandardCopyOption.COPY_ATTRIBUTES};
   private static final CopyOption[] COPY_REPLACE = {LinkOption.NOFOLLOW_LINKS, StandardCopyOption.COPY_ATTRIBUTES, StandardCopyOption.REPLACE_EXISTING};
+  private static final CopyOption[] MOVE_STANDARD = {LinkOption.NOFOLLOW_LINKS, StandardCopyOption.ATOMIC_MOVE};
+  private static final CopyOption[] MOVE_REPLACE = {LinkOption.NOFOLLOW_LINKS, StandardCopyOption.ATOMIC_MOVE, StandardCopyOption.REPLACE_EXISTING};
 
   private static final boolean WIN_UNPRIVILEGED = IS_WINDOWS && Boolean.getBoolean("idea.unprivileged.process");
 
   private static File myTempDir;
-
-  public static boolean isZipFile(String fileName) {
-    return fileName.endsWith(".zip") || fileName.endsWith(".jar");
-  }
 
   public synchronized static File getTempFile(String name) throws IOException {
     if (myTempDir == null) {
       String path = System.getProperty("java.io.tmpdir");
       if (path == null) throw new IllegalArgumentException("System property `java.io.tmpdir` is not defined");
 
-      Path dir = Paths.get(path);
+      Path dir = Path.of(path);
       if (!Files.isDirectory(dir)) throw new IOException("Not a directory: " + dir);
 
       if (REQUIRED_FREE_SPACE > 0) {
@@ -67,9 +65,12 @@ public final class Utils {
   }
 
   public static void delete(File file) throws IOException {
-    Path start = file.toPath();
-    if (Files.exists(start, LinkOption.NOFOLLOW_LINKS)) {
-      Files.walkFileTree(start, new SimpleFileVisitor<Path>() {
+    delete(file.toPath());
+  }
+
+  public static void delete(Path file) throws IOException {
+    if (Files.exists(file, LinkOption.NOFOLLOW_LINKS)) {
+      Files.walkFileTree(file, new SimpleFileVisitor<>() {
         @Override
         public FileVisitResult visitFile(Path file, BasicFileAttributes attrs) throws IOException {
           tryDelete(file);
@@ -123,13 +124,13 @@ public final class Utils {
     return file.canExecute();
   }
 
-  public static void setExecutable(File file) throws IOException {
-    setExecutable(file, true);
+  public static void setExecutable(Path file) throws IOException {
+    setExecutable(file.toFile());
   }
 
-  public static void setExecutable(File file, boolean executable) throws IOException {
+  public static void setExecutable(File file) throws IOException {
     LOG.info("Setting executable permissions for: " + file);
-    if (!file.setExecutable(executable, false)) {
+    if (!file.setExecutable(true, false)) {
       throw new IOException("Cannot set executable permissions for: " + file);
     }
   }
@@ -145,15 +146,17 @@ public final class Utils {
   public static void createLink(String target, File link) throws IOException {
     Path path = link.toPath();
     Files.deleteIfExists(path);
-    Files.createSymbolicLink(path, Paths.get(target));
+    Files.createSymbolicLink(path, Path.of(target));
   }
 
   public static void copy(File from, File to, boolean overwrite) throws IOException {
-    String message = from + (overwrite ? " over " : " into ") + to;
-    LOG.info(message);
+    copy(from.toPath(), to.toPath(), overwrite);
+  }
 
-    Path src = from.toPath(), dst = to.toPath();
-    BasicFileAttributes attrs = Files.readAttributes(src, BasicFileAttributes.class, LinkOption.NOFOLLOW_LINKS);
+  public static void copy(Path src, Path dst, boolean overwrite) throws IOException {
+    LOG.info(src + (overwrite ? " over " : " into ") + dst);
+
+    var attrs = Files.readAttributes(src, BasicFileAttributes.class, LinkOption.NOFOLLOW_LINKS);
     if (attrs.isDirectory()) {
       Files.createDirectories(dst);
     }
@@ -171,7 +174,7 @@ public final class Utils {
   public static void copyDirectory(Path from, Path to) throws IOException {
     LOG.info(from + " into " + to);
 
-    Files.walkFileTree(from, new SimpleFileVisitor<Path>() {
+    Files.walkFileTree(from, new SimpleFileVisitor<>() {
       @Override
       public FileVisitResult preVisitDirectory(Path dir, BasicFileAttributes attrs) throws IOException {
         if (dir != from || !Files.exists(to)) {
@@ -195,6 +198,16 @@ public final class Utils {
         return FileVisitResult.CONTINUE;
       }
     });
+  }
+
+  public static void move(Path src, Path dst, boolean overwrite) throws IOException {
+    Files.createDirectories(dst.getParent());
+    Files.move(src, dst, overwrite ? MOVE_REPLACE : MOVE_STANDARD);
+  }
+
+  public static void writeString(Path file, String data) throws IOException {
+    Files.createDirectories(file.getParent());
+    Files.writeString(file, data);
   }
 
   public static void copyFileToStream(File from, OutputStream out) throws IOException {
@@ -275,11 +288,11 @@ public final class Utils {
     return new BufferedInputStream(zipFile.getInputStream(entry));
   }
 
-  // always collect files and folders - to avoid cases such as IDEA-152249
+  // always collect files and folders to avoid cases such as IDEA-152249
   public static LinkedHashSet<String> collectRelativePaths(Path root) throws IOException {
     LinkedHashSet<String> result = new LinkedHashSet<>();
 
-    Files.walkFileTree(root, new SimpleFileVisitor<Path>() {
+    Files.walkFileTree(root, new SimpleFileVisitor<>() {
       @Override
       public FileVisitResult preVisitDirectory(Path dir, BasicFileAttributes attrs) {
         if (dir != root) {
@@ -298,60 +311,8 @@ public final class Utils {
     return result;
   }
 
-  public static InputStream newFileInputStream(File file, boolean normalize) throws IOException {
-    return normalize && isZipFile(file.getName()) ? new NormalizedZipInputStream(file) : new FileInputStream(file);
-  }
-
-  private static final class NormalizedZipInputStream extends InputStream {
-    private final ZipFile myZip;
-    private final List<? extends ZipEntry> myEntries;
-    private InputStream myStream = null;
-    private int myNextEntry = 0;
-    private final byte[] myByte = new byte[1];
-
-    private NormalizedZipInputStream(File file) throws IOException {
-      myZip = new ZipFile(file);
-      myEntries = Collections.list(myZip.entries());
-      myEntries.sort(Comparator.comparing(ZipEntry::getName));
-      loadNextEntry();
-    }
-
-    private void loadNextEntry() throws IOException {
-      if (myStream != null) {
-        myStream.close();
-        myStream = null;
-      }
-      while (myNextEntry < myEntries.size() && myStream == null) {
-        myStream = findEntryInputStreamForEntry(myZip, myEntries.get(myNextEntry++));
-      }
-    }
-
-    @Override
-    public int read(byte[] bytes, int off, int len) throws IOException {
-      if (myStream == null) {
-        return -1;
-      }
-      int b = myStream.read(bytes, off, len);
-      if (b == -1) {
-        loadNextEntry();
-        return read(bytes, off, len);
-      }
-      return b;
-    }
-
-    @Override
-    public int read() throws IOException {
-      int b = read(myByte, 0, 1);
-      return b == -1 ? -1 : myByte[0];
-    }
-
-    @Override
-    public void close() throws IOException {
-      if (myStream != null) {
-        myStream.close();
-      }
-      myZip.close();
-    }
+  public static InputStream newFileInputStream(File file) throws IOException {
+    return new FileInputStream(file);
   }
 
   public static class OpenByteArrayOutputStream extends ByteArrayOutputStream {
